# ERRA-Application

./: README.md  pyproject.toml
.github/: copilot-instructions.md
ERRA-theory/: README.md
ERRA-theory/python/: __init__.py  erra.py  example.py
code/: __init__.py  erra.py
code/demonstration-scripts/: ERRA Roanoke heterogeneity demo Fig 4.R  ERRA SacoR nonlinearity demo Figs7-9.R
code/demonstration-scripts/Outputs from demo scripts/Baseline filtering demo - Fig 21 of intro to ERRA/: Baseline filtering demo Nantahala_avgRRD_splitby_antQ_m=200_h=3_fq=0.1_nlin.txt  Baseline filtering demo Nantahala_avgRRD_splitby_antQ_m=200_h=3_nlin.txt
code/demonstration-scripts/Outputs from demo scripts/Broken-stick RRD - Fig 16 of K2024/: Hafren_Fig16_avgRRD_m=1000_h=3_nlin.txt  (+4 more)
code/erra_scripts_v1.06/: ERRA_v1.06.R  ERRA_v1.06_no_Rcpp.R
code/examples/: complex_sensitivity_study.py  example.py  example_en.py  gao2025_dynamic_linkages.py  sharif_ameli2025_functional_simplicity.py  tu2025_permafrost_transition.py
code/examples/data_prep/: gao2025_fetch_data.py  sharif_ameli2025_fetch_data.py  tu2025_fetch_data.py
code/python/: example.py  example_en.py  plotting_guide.md
examples/: master_demonstration.py  tu2025_permafrost_transition.py
reference_materials/R_implementation/demonstration-scripts/: ERRA MOPEX weighted average RRD demo Fig10.R  ERRA baseline filtering demo.R  ERRA broken-stick RRD and NRF demo Fig 16.R  ERRA fitted values demo.R  ERRA nonstationarity demo Figs12-15.R  ERRA robust estimation demo.R
src/erra/: __init__.py  erra_core.py  nonlin.py  splitting.py  utils.py
src/erra_hydrology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_splitting.py
(+57 files in other folders)
